# django-dream-blog

./: .gitattributes  .gitignore  .mcp.json  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  manage.py  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/agents/: implement.md  plan.md
.claude/commands/trellis/: brainstorm.md  check-cross-layer.md  finish-work.md  record-session.md  start.md
.claude/hooks/: format.py  inject-subagent-context.py  lint.py  session-start.py
.trellis/: .template-hashes.json
.trellis/scripts/: add_session.py  create_bootstrap.py  task.py
.trellis/scripts/common/: __init__.py  cli_adapter.py  git_context.py  registry.py  task_queue.py  worktree.py
.trellis/scripts/multi_agent/: plan.py  start.py
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: code-reuse-thinking-guide.md  dev-server-mcp.md  index.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/02-25-auto-commit-generated-files/: check.jsonl  debug.jsonl  implement.jsonl  prd.md  task.json
.trellis/tasks/02-25-dev-manager-mcp-integration/: prd.md  task.json
.trellis/tasks/02-26-column-tutorial-name-above-title/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/02-26-ui-polish-meta-sidebar-darkmode/: debug.jsonl  implement.jsonl  task.json
.trellis/tasks/02-27-migrate-features/: implement.jsonl  prd.md  task.json
.trellis/tasks/02-28-notification-ui-ux/: prd.md  task.json
.trellis/workspace/alice/: index.md  journal-1.md
.trellis/workspace/claude-agent/: index.md  journal-1.md
config/: asgi.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
devops/ansible/: hosts.yml  site.yml
devops/ansible/group_vars/: all.yml
docs/plans/: 2026-02-27-tutorial-sidebar-design.md  2026-02-27-tutorial-sidebar-impl.md  2026-02-28-notification-migration-design.md  2026-02-28-notification-migration.md
dream_blog/: conftest.py  feeds.py  sitemaps.py  test_sitemap_and_feeds.py  tests.py  urls.py  views.py
dream_blog/columns/: admin.py  apps.py  models.py  urls.py  views.py
dream_blog/columns/migrations/: 0001_initial.py  0002_alter_article_content_alter_column_content.py
dream_blog/columns/templatetags/: columns_extra.py
dream_blog/columns/tests/: test_prev_next.py
dream_blog/comments/: __init__.py  admin.py  apps.py  forms.py  models.py  moderation.py  urls.py  views.py
dream_blog/comments/migrations/: 0001_initial.py
dream_blog/comments/templatetags/: comments_extra.py
dream_blog/core/: admin.py  entries.py  models.py  tasks.py  utils.py  views.py
dream_blog/core/management/commands/: sendtestsentryevent.py
dream_blog/core/templatetags/: core_extra.py  entry_urls.py
dream_blog/core/tests/: models.py  test_models.py  test_utils.py
dream_blog/friendlinks/: admin.py  apps.py  tests.py
dream_blog/friendlinks/migrations/: 0001_initial.py
dream_blog/friendlinks/templatetags/: friendlinks_extra.py
dream_blog/notify/: factories.py  views.py
dream_blog/notify/management/commands/: fix_stale_notifications.py
dream_blog/notify/templatetags/: notify_tags.py
dream_blog/notify/tests/: test_factories.py  test_templatetags.py  test_views.py
dream_blog/posts/: admin.py  models.py  urls.py  views.py
dream_blog/posts/migrations/: 0001_initial.py  0002_initial.py  0003_alter_post_content.py
dream_blog/posts/tests/: factories.py  test_admin.py  test_models.py  test_views.py
dream_blog/scripts/fake/: _clean.py  _posts.py  _superuser.py  _tutorials.py  all.py
dream_blog/templates/: base.html
dream_blog/templates/accounts/inclusions/: _login.html
dream_blog/templates/admin/: change_form.html
dream_blog/templates/columns/: article_detail.html  detail.html
dream_blog/templates/columns/inclusions/: _columns.html  _toc.html
dream_blog/templates/comments/email/: comment.html  reply.html
dream_blog/templates/comments/inclusions/: _comment.html  _comment_app.html  _form.html
dream_blog/templates/friendlinks/inclusions/: _friendlinks.html
dream_blog/templates/inclusions/: _entry_content.html  _entry_meta.html  _entry_meta_index.html  _footer.html  _nav.html  _pagination.html  _prev_next.html  _profile.html  _toc.html
dream_blog/templates/notifications/: base.html  comment.html  list.html  reply.html
dream_blog/templates/pages/: home.html
dream_blog/templates/posts/: detail.html
dream_blog/templates/tree_comments/email/: base.html  (+3 more)
dream_blog/templates/tutorials/: detail.html  material_detail.html
dream_blog/templates/webtools/: django_secret_key.html
dream_blog/tree_comments/: __init__.py  admin.py  apps.py  forms.py  models.py  moderation.py  urls.py  views.py
dream_blog/tree_comments/migrations/: 0001_initial.py  0002_alter_treecomment_comment.py
dream_blog/tree_comments/templatetags/: tree_comments_extra.py
dream_blog/tutorials/: admin.py  models.py  urls.py  views.py
dream_blog/tutorials/migrations/: 0001_initial.py  0002_initial.py  0003_alter_material_content_alter_tutorial_content.py
dream_blog/tutorials/templatetags/: tutorials_extra.py
dream_blog/tutorials/tests/: factories.py  test_admin.py  test_models.py  test_views.py
dream_blog/users/: admin.py  apps.py  models.py
dream_blog/users/migrations/: 0001_initial.py
dream_blog/users/tests/: factories.py
dream_blog/webtools/: apps.py  models.py  views.py
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
frontend/src/: admin-theme-sync.ts  backtop.ts  comment.ts  friendly.css  index.css  index.js  main.ts  navbar-blur.ts  offcanvas.ts  scrollspy.ts  theme-switcher.ts  toast.ts
frontend/src/scripts/: admin-preview-render.ts  katex.js  mermaid.js
frontend/src/styles/: components.css  design-tokens.css  preview.css  prose.css  tailwind-base.css
frontend/src/util/: backdrop.ts
(+44 files in other folders)
