[project]
name = "django-dream-blog"
version = "0.1.0"
description = ""
authors = [{ name = "jukanntenn", email = "jukanntenn@outlook.com" }]
requires-python = ">=3.10, <4"
readme = "README.md"
dependencies = [
    "django>=5.2,<6",
    "django-environ>=0.11.2,<0.12",
    "django-model-utils>=4.4.0,<5",
    "django-vite>=3.0.3,<4",
    "django-extensions>=3.2.3,<4",
    "markdown>=3.5.2,<4",
    "pymdown-extensions~=10.7",
    "pygments>=2.17.2,<3",
    "django-constance>=4.0,<5",
    "django-hitcount>=1.3.5,<2",
    "django-cte>=2,<3",
    "django-contrib-comments>=2.2.0,<3",
    "django-allauth>=0.61.1,<0.62",
    "django-notifications-hq>=1.8.3,<2",
    "django-anymail[resend]~=10.2",
    "sentry-sdk[django]>=1.41.0,<2",
    "django-health-check>=3.18.1,<4",
    "huey>=2.5.0,<3",
    "django-tencentcos-storage>=0.2.1,<0.3",
    "django-dbbackup>=4.1.0,<5",
    "django-huey-email>=0.0.1,<0.0.2",
    "django-md-field",
    "django-tree-comments",
]

[dependency-groups]
dev = [
    "django-debug-toolbar>=4.2.0,<5",
    "factory-boy>=3.3.0,<4",
    "django-browser-reload>=1.12.1,<2",
    "rich>=13.7.1,<14",
    "daphne>=4.0.0,<5",
    "ruff>=0.15.4",
]
test = [
    "pytest>=7.4.4,<8",
    "pytest-django>=4.7.0,<5",
    "pytest-cov>=4.1.0,<5",
    "django-test-plus>=2.2.3,<3",
    "pytest-sugar>=1.0.0,<2",
    "coverage[toml]>=7.4.1,<8",
    "freezegun>=1.4.0,<2",
]
production = ["gunicorn>=21.2.0,<22", "uvicorn[standard]>=0.30.0,<1"]

[tool.uv]
default-groups = ["dev", "test", "production"]

[[tool.uv.index]]
name = "tuna"
url = "https://pypi.org/simple"
default = true

[tool.uv.sources]
django-notifications-hq = { git = "https://github.com/django-notifications/django-notifications" }
django-md-field = { git = "https://github.com/jukanntenn/django-md-field.git", branch = "main" }
django-tencentcos-storage = { git = "https://github.com/jukanntenn/django-tencentcos-storage", branch = "main" }
django-tree-comments = { git = "https://github.com/jukanntenn/django-tree-comments", rev = "502b412c63ad916a035ab74ab612c9658ecf42b8" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
minversion = "7.0"
DJANGO_SETTINGS_MODULE = "config.settings.test"
python_files = "tests.py test_*.py"
norecursedirs = "frontend"
addopts = "--reuse-db --cov=dream_blog/ --cov-report html"

[tool.coverage.run]
omit = ["*/migrations/*", "*/tests/*", "dream_blog/scripts/*"]

[tool.ruff]
exclude = ["**/migrations/"]

[tool.hatch.build.targets.wheel]
packages = ["dream_blog"]
